--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>TitLe</title>
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
+    <!-- Animate CSS -->
+    <link rel="stylesheet" href="./css/animate.min.css">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -18,10 +20,11 @@
 </head>
 
 <body>
-    <header class="header container">
-        <nav class="navbar navbar-expand-lg">
+    <!-- HEADER -->
+    <header class="header container-xl">
+        <nav class="navbar navbar-expand-lg py-3">
             <a class="navbar-brand" href="#">
-                <i class="fa-solid fa-dice-d20"></i> <span>CyberPortfolio</span>
+                <i class="fa-solid fa-dice-d20"></i><span> CyberPortfolio</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +39,7 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="#">Service</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
@@ -45,53 +48,314 @@
             </div>
         </nav>
     </header>
-    <section class="mycarousel">
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="carousel-caption d-none d-md-block">
-                        <div class="img-thumb">
-                            <img class="img-fluid" src="./images/01-3.jpg" alt="" />
+    <!-- CAROUSEL -->
+   <section class="myCarousel">
+    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <!-- <img src="./images/mountains-1.jpg" class="d-block w-100" alt="..."> -->
+            <div class="carousel-caption d-md-block">
+                <img class="img-fluid animate__animated animate__fadeInUp" src="./images/01-3.jpg" alt="" />
+                <h5 class="animate__animated animate__fadeInUp animate__delay-1s">Our goals. Our mission.</h5>
+                <p class="animate__animated animate__fadeInUp animate__delay-2s">How we help other companies to grow.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <!-- <img src="./images/mountains.jpg" class="d-block w-100" alt="..."> -->
+            <div class="carousel-caption d-md-block">
+                <img class="img-fluid animate__animated animate__fadeInUp" src="./images/02-3.jpg" alt="" />
+                <h5 class="animate__animated animate__fadeInUp animate__delay-1s">Our goals. Our mission.</h5>
+                <p class="animate__animated animate__fadeInUp animate__delay-2s">How we help other companies to grow.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <!-- <img src="./images/finland.jpg" class="d-block w-100" alt="..."> -->
+            <div class="carousel-caption d-md-block">
+                <img class="img-fluid animate__animated animate__fadeInUp" src="./images/03-3.jpg" alt="" />
+                <h5 class="animate__animated animate__fadeInUp animate__delay-1s">Our goals. Our mission.</h5>
+                <p class="animate__animated animate__fadeInUp animate__delay-2s">How we help other companies to grow.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+   </section>
+   <!-- PROJECT -->
+   <div class="project py-5">
+    <div class="container py-5">
+        <div class="project__title text-center">
+            <h2>I Love What I Do</h2>
+            <p class="my-3">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc</p>
+        </div>
+        <div class="project__content pt-3">
+            <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+             <li class="nav-item" role="presentation">
+               <a class="nav-link active" id="all-tab" data-toggle="tab" href="#all" role="tab" aria-controls="all" aria-selected="true">All Projects</a>
+             </li>
+             <li class="nav-item" role="presentation">
+               <a class="nav-link" id="illus-tab" data-toggle="tab" href="#illus" role="tab" aria-controls="illus" aria-selected="false">Illustration</a>
+             </li>
+             <li class="nav-item" role="presentation">
+               <a class="nav-link" id="photo-tab" data-toggle="tab" href="#photo" role="tab" aria-controls="messages" aria-selected="false">Photography</a>
+             </li>
+             <li class="nav-item" role="presentation">
+               <a class="nav-link" id="web-tab" data-toggle="tab" href="#web" role="tab" aria-controls="settings" aria-selected="false">Website</a>
+             </li>
+            </ul>
+            <div class="tab-content">
+             <div class="tab-pane active" id="all" role="tabpanel" aria-labelledby="all-tab">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 wow animate__animated animate__zoomIn">
+                        <div class="col__item text-center">
+                            <img class="img-fluid" src="./images/g1.jpg" alt="">
+                            <div>
+                                <h3>Apologetic robot holding flowers</h3>
+                                <p>Branding</p>
+                            </div>
                         </div>
-                        <h3>Our goals. Our mission.</h3>
-                        <p>How we help other companies to grow.</p>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow animate__animated animate__zoomIn">
+                        <div class="col__item text-center">
+                            <img class="img-fluid" src="./images/g2.jpg" alt="">
+                            <div>
+                                <h3>Woman walking her small dog</h3>
+                                <p>Illustrations</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow animate__animated animate__zoomIn">
+                        <div class="col__item text-center">
+                            <img class="img-fluid" src="./images/g3.jpg" alt="">
+                            <div>
+                                <h3>Oil bottle branding</h3>
+                                <p>Branding</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow animate__animated animate__zoomIn">
+                        <div class="col__item text-center">
+                            <img class="img-fluid" src="./images/g4.jpg" alt="">
+                            <div>
+                                <h3>Smiling Woman</h3>
+                                <p>Illustrations</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow animate__animated animate__zoomIn">
+                        <div class="col__item text-center">
+                            <img class="img-fluid" src="./images/g5.jpg" alt="">
+                            <div>
+                                <h3>Drink can design</h3>
+                                <p>Packaging</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow animate__animated animate__zoomIn">
+                        <div class="col__item text-center">
+                            <img class="img-fluid" src="./images/g6.jpg" alt="">
+                            <div>
+                                <h3>I love you hand gesture</h3>
+                                <p>Illustrations</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <div class="carousel-caption d-none d-md-block">
-                        <div class="img-thumb">
-                            <img class="img-fluid" src="./images/01-3.jpg" alt="" />
+             </div>
+             <div class="tab-pane fade" id="illus" role="tabpanel" aria-labelledby="illus-tab">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 animate__animated animate__zoomIn">
+                        <div class="col__item text-center">
+                            <img class="img-fluid" src="./images/g1.jpg" alt="">
+                            <div>
+                                <h3>Apologetic robot holding flowers</h3>
+                                <p>Branding</p>
+                            </div>
                         </div>
-                        <h3>Our goals. Our mission.</h3>
-                        <p>How we help other companies to grow.</p>
+                    </div>
+                    <div class="col-lg-4 col-md-6 animate__animated animate__zoomIn">
+                        <div class="col__item text-center">
+                            <img class="img-fluid" src="./images/g2.jpg" alt="">
+                            <div>
+                                <h3>Woman walking her small dog</h3>
+                                <p>Illustrations</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 animate__animated animate__zoomIn">
+                        <div class="col__item text-center">
+                            <img class="img-fluid" src="./images/g3.jpg" alt="">
+                            <div>
+                                <h3>Oil bottle branding</h3>
+                                <p>Branding</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <div class="carousel-caption d-none d-md-block">
-                        <div class="img-thumb">
-                            <img class="img-fluid" src="./images/01-3.jpg" alt="" />
+             </div>
+             <div class="tab-pane fade" id="photo" role="tabpanel" aria-labelledby="photo-tab">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 animate__animated animate__zoomIn">
+                        <div class="col__item text-center">
+                            <img class="img-fluid" src="./images/g3.jpg" alt="">
+                            <div>
+                                <h3>Oil bottle branding</h3>
+                                <p>Branding</p>
+                            </div>
                         </div>
-                        <h3>Our goals. Our mission.</h3>
-                        <p>How we help other companies to grow.</p>
+                    </div>
+                    <div class="col-lg-4 col-md-6 animate__animated animate__zoomIn">
+                        <div class="col__item text-center">
+                            <img class="img-fluid" src="./images/g4.jpg" alt="">
+                            <div>
+                                <h3>Smiling Woman</h3>
+                                <p>Illustrations</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+             </div>
+             <div class="tab-pane fade" id="web" role="tabpanel" aria-labelledby="web-tab">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 animate__animated animate__zoomIn">
+                        <div class="col__item text-center">
+                            <img class="img-fluid" src="./images/g6.jpg" alt="">
+                            <div>
+                                <h3>I love you hand gesture</h3>
+                                <p>Illustrations</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+             </div>
+            </div>
+        </div>
+    </div>
+   </div>
+   <!-- FEATURE -->
+   <section class="feature">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="feature__title text-center">
+            <h2>I'm Available For Hire</h2>
+            <p class="my-3">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.</p>
+        </div>
+        <div class="feature__content mt-5 pt-3">
+            <div class="row">
+                <div class="col-lg-4 col-12 mt-lg-0 mt-md-0 mt-5">
+                    <div class="col__item text-center">
+                        <i class="fa fa-paint-brush"></i>
+                        <h4>Design</h4>
+                        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc</p>                          
+                    </div>
+                </div>
+                <div class="col-lg-4 col-12 mt-lg-0 mt-md-0 mt-5">
+                    <div class="col__item text-center">
+                        <i class="fa fa-shekel-sign"></i>
+                        <h4>Marketing</h4>
+                        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc</p>                          
+                    </div>
+                </div>
+                <div class="col-lg-4 col-12 mt-lg-0 mt-md-0 mt-5">
+                    <div class="col__item text-center">
+                        <i class="fa fa-camera"></i>
+                        <h4>Photography</h4>
+                        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc</p>                          
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+   </section>
+   <!-- Award -->
+   <section class="award">
+        <!-- <div class="award__img"></div> -->
+        <div class="container-xl">
+            <div class="award__content">
+                <div class="row">
+                    <div class="col-lg-5 col-md-6 col-12">
+                        <div class="col__item-5">
+                            <h2>
+                                Our Achievement and Award
+                            </h2>
+                            <p class="my-3">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-7 col-md-6 col-12">
+                        <div class="col__item-7">
+                            <p>
+                                Luctus porta semper aptent morbi. Vestibulum lectus tempus augue dictumst enim commodo facilisis. Mus laoreet scelerisque habitant urna dui sem diam. Purus dis nam eget. Scelerisque placerat lectus lorem etiam. Elementum integer phasellus lectus.
+                            </p>
+                            <div>
+                                <div class="row">
+                                    <div class="col">
+                                        <img class="img-fluid" src="./images/award-1.png" alt="">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid" src="./images/award-2.png" alt="">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid" src="./images/award-3.png" alt="">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid" src="./images/award-4.png" alt="">
+                                    </div>
+                                    <div class="col">
+                                        <img class="img-fluid" src="./images/award-5.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+   </section>
+   <!-- footer -->
+   <footer class="footer py-5">
+    <div class="container text-center">
+        <div class="footer__top">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-google-plus-g"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <div class="footer__bottom">
+            <p>© 2021 CyberPortfolio. All rights reserved | Designed by CyberSoft</p>
+        </div>
+    </div>
+   </footer>
+
+
+
+  <script>
+    $(function () {
+      $('#myTab li:last-child a').tab('show')
+    })
+  </script>
+
     <!-- JQUERY JS -->
     <script src="./js/jquery-3.6.0.min.js"></script>
     <!-- BOOTSTRAP JS -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
         crossorigin="anonymous"></script>
+    <!-- WOW JS -->
+    <script src="./js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
+
+
